# cakes_by_kindra

./: .gitignore  ]  package.json
client/: package-lock.json  package.json  types.ts
client/src/: App.svelte
client/src/components/: Footer.svelte
client/src/components/navePopout/: NaveButton.svelte  NavePopout.svelte
client/src/pages/: Home.svelte  Menu.svelte
public/: global.css
server/: pyproject.toml
server/server/config/: connection.py
server/server/db/: schema.sql
src/: App.svelte
src/components/: Header.svelte
src/components/navePopout/: NaveButton.svelte  NavePopout.svelte
src/pages/: Order.svelte
src/stores/: Cakes.ts
