[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jett65 <jettc65@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
pymysql = "^1.1.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
